Migrated the codebase to Java 17